Update Obj Reader with Camera OpenGL

--- a/trabalhoGA/trabalhoGA/trabalhoGA.vcxproj
+++ b/trabalhoGA/trabalhoGA/trabalhoGA.vcxproj
@@ -19,7 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Group.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
@@ -38,8 +37,12 @@
     <ClInclude Include="Texture.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="mesa\mesa01.mtl" />
     <None Include="Shaders\Core\core.fs" />
     <None Include="Shaders\Core\core.vs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="mesa\mesa01.bmp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
